Incluído uma Estrutura Inicial Semântica do Projeto.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Projeto Front-end</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -23,9 +23,32 @@
 </head>
 
 <body>
-
+  <header> 
+     <h1>Portal do Luciano Lima</h1> 
+     <nav>Menu de navegação principal</nav> 
+  </header>
+  <main> 
+     <section> 
+        <h2>Olá a Todos. Segue os meus Dados.</h2>
+        <h3>Nome: </h3>       <li>Luciano Romero Soares de Lima</li>
+        <h3>Email: </h3>      <li>lromerosl@yahoo.com.br</li>
+        <h3>Profissão: </h3>  <li>Analista de Informática em Saúde</li>
+        <h3>Contatos: </h3>   <li>(31) 99114-4226 (WhatApps) </li>
+        <h3>CV Lattes|ResearchGate|LinkedIn: </h3>  <address>http://lattes.cnpq.br/5065415982348064 | https://www.researchgate.net/profile/Luciano_Lima4 | https://www.linkedin.com/in/luciano-lima-5365b85</address> 
+        <h3>Bibliografia: </h3>   
+            <hr>Analista, Gestor e Professor de Informática há 39 Anos. Há 25 Anos atuando profissionalmente na Rede Sarah de Hospitais de Reabilitação.</hr>
+            <hr>Formado em Engenharia Elética pela Universidade Federal da Paraíba.</hr>
+            <hr>Doutorado em Ciência da Computação pela Universidade Federal de Minas Gerais.</hr>
+            <hr>Meu Objetivo Principal no Curso é potencializar meus conhecimentos acadêmicos e operacionais no mundo do Desenvolvimento WEB.</hr>
+        <script>
+            alert( 'Olá, Mundo WEB !' );
+        </script> 
+     </section> 
+     <aside> 
+        <h3>Página Inicial Versionada GIT. </h3>
+     </aside> 
+  </main>
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
@@ -36,6 +59,9 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+ <footer>
+  <h5>Página Criada por Luciano Lima.   </h5>
+ </footer>
 </body>
 
 </html>
