Incluído e alterado o Estilo da Página, via CSS.

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
             <hr>Analista, Gestor e Professor de Informática há 39 Anos. Há 25 Anos atuando profissionalmente na Rede Sarah de Hospitais de Reabilitação.</hr>
             <hr>Formado em Engenharia Elética pela Universidade Federal da Paraíba.</hr>
             <hr>Doutorado em Ciência da Computação pela Universidade Federal de Minas Gerais.</hr>
-            <hr>Meu Objetivo Principal no Curso é potencializar meus conhecimentos acadêmicos e operacionais no mundo do Desenvolvimento WEB.</hr>
         <script>
             alert( 'Olá, Mundo WEB !' );
         </script> 
      </section> 
      <aside> 
-        <h3>Página Inicial Versionada GIT. </h3>
+        Página Inicial Versionada GIT.
      </aside> 
   </main>
   <!-- Add your site or application content here -->
@@ -60,7 +59,7 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
  <footer>
-  <h5>Página Criada por Luciano Lima.   </h5>
+    Página Criada por Luciano Lima.
  </footer>
 </body>
 
